changed code and config

--- a/Image_and_Script/Jupyter/simple_analysis.html
+++ b/Image_and_Script/Jupyter/simple_analysis.html
@@ -7738,6 +7738,13 @@ Parameters we will extract:</p>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
+<pre>WARNING:root:Ignoring Directory: /home/davidmcguinness/.fair/data/David/jupyter_testing_analysis as it is not empty
+</pre>
+</div>
+</div>
+<div class="jp-OutputArea-child">
+<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
 <pre>WARNING:root:Ignoring Directory: /home/davidmcguinness/.fair/data/David as it is not empty
 </pre>
 </div>
